--- a/po/pt_BR/kiconedit.po
+++ b/po/pt_BR/kiconedit.po
@@ -6,10 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-07-27 22:16+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 1998-08-03 21:27+0200\n"
+"PO-Revision-Date: 1998-09-08 09:00\n"
+"Last-Translator: Sandro Nunes Henrique <sandro@conectiva.com.br>\n"
+"Language-Team: pt_BR <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
@@ -17,98 +17,99 @@ msgstr ""
 #: utils.cpp:56
 #, c-format
 msgid "copyFile - There was an error opening destination file: %s"
-msgstr ""
+msgstr "copyFile - Houve um erro na abertura do arquivo de destino: %s"
 
 #: utils.cpp:71
 #, c-format
 msgid "copyFile - There was an error opening source file: %s"
-msgstr ""
+msgstr "copyFile - Houve um erro na abertura do arquivo de origem: %s"
 
 #: utils.cpp:83
 #, c-format
 msgid "removeFile - There was an error removing the file: %s"
-msgstr ""
+msgstr "removeFile - Houve um erro na remoção do arquivo: %s"
 
 #: kicon.cpp:49 kicon.cpp:71 kicon.cpp:159 kicon.cpp:239 kicon.cpp:318
 #: kicon.cpp:371 kicon.cpp:407 kiconedit.cpp:215 kiconedit.cpp:622
 #: kiconedit.cpp:682 kiconedit.cpp:900 kicongrid.cpp:609 kicongrid.cpp:625
 #: kicongrid.cpp:680 kicongrid.cpp:709
 msgid "Warning"
-msgstr ""
+msgstr "Atenção"
 
 #: kiconedit.cpp:216 kiconedit.cpp:623 kiconedit.cpp:683
 msgid ""
 "The current file has been modified.\n"
 "Do you want to save it?"
-msgstr ""
+msgstr "O arquivo atual foi modificado.\n"
+"Você deseja salvá-lo?"
 
 #: kiconedit.cpp:370
 msgid "&New window"
-msgstr ""
+msgstr "&Nova janela"
 
 #: kiconedit.cpp:373
 msgid "&New..."
-msgstr ""
+msgstr "&Novo..."
 
 #: kiconedit.cpp:375
 msgid "&Open..."
-msgstr ""
+msgstr "&Abrir"
 
 #: kiconedit.cpp:377
 msgid "Open recent"
-msgstr ""
+msgstr "Abrir recentes"
 
 #: kiconedit.cpp:380
 msgid "&Save"
-msgstr ""
+msgstr "&Salvar"
 
 #: kiconedit.cpp:382
 msgid "Save &as..."
-msgstr ""
+msgstr "Salvar &como..."
 
 #: kiconedit.cpp:384
 msgid "&Print..."
-msgstr ""
+msgstr "&Imprimir"
 
 #: kiconedit.cpp:388
 msgid "&Close"
-msgstr ""
+msgstr "&Fechar"
 
 #: kiconedit.cpp:390
 msgid "&Exit"
-msgstr ""
+msgstr "&Sair"
 
 #: kiconedit.cpp:392
 msgid "&File"
-msgstr ""
+msgstr "&Arquivo"
 
 #: kiconedit.cpp:396
 msgid "Cu&t"
-msgstr ""
+msgstr "&Cortar"
 
 #: kiconedit.cpp:398
 msgid "&Copy"
-msgstr ""
+msgstr "&Copiar"
 
 #: kiconedit.cpp:400
 msgid "&Paste"
-msgstr ""
+msgstr "Co&lar"
 
 #: kiconedit.cpp:402
 msgid "Paste as &new"
-msgstr ""
+msgstr "Colar como &novo"
 
 #: kiconedit.cpp:403
 msgid "Clea&r"
-msgstr ""
+msgstr "Limpa&r"
 
 #: kiconedit.cpp:405
 msgid "Select &all"
-msgstr ""
+msgstr "Selecionar &tudo"
 
 #: kiconedit.cpp:407
 msgid "&Edit"
-msgstr ""
+msgstr "&Editar"
 
 #: kiconedit.cpp:411
 msgid "1:1"
@@ -124,59 +125,59 @@ msgstr ""
 
 #: kiconedit.cpp:417
 msgid "Zoom &in"
-msgstr ""
+msgstr "Aprox&imar"
 
 #: kiconedit.cpp:418
 msgid "Zoom &out"
-msgstr ""
+msgstr "Afastado"
 
 #: kiconedit.cpp:419
 msgid "Zoom factor"
-msgstr ""
+msgstr "Fator de aproximação"
 
 #: kiconedit.cpp:420
 msgid "&View"
-msgstr ""
+msgstr "&Ver"
 
 #: kiconedit.cpp:425
 msgid "&Resize"
-msgstr ""
+msgstr "&Alterar Tamanho"
 
 #: kiconedit.cpp:427
 msgid "&GrayScale"
-msgstr ""
+msgstr "&Tons de Cinza"
 
 #: kiconedit.cpp:431
 msgid "&Icon"
-msgstr ""
+msgstr "&Ícone"
 
 #: kiconedit.cpp:435
 msgid "Freehand"
-msgstr ""
+msgstr "À mão livre"
 
 #: kiconedit.cpp:436
 msgid "Rectangle"
-msgstr ""
+msgstr "Retângulo"
 
 #: kiconedit.cpp:437
 msgid "Filled rectangle"
-msgstr ""
+msgstr "Retângulo cheio"
 
 #: kiconedit.cpp:438
 msgid "Circle"
-msgstr ""
+msgstr "Círculo"
 
 #: kiconedit.cpp:439
 msgid "Filled circle"
-msgstr ""
+msgstr "Círculo cheio"
 
 #: kiconedit.cpp:440
 msgid "Ellipse"
-msgstr ""
+msgstr "Elipse"
 
 #: kiconedit.cpp:441
 msgid "Filled ellipse"
-msgstr ""
+msgstr "Elipse cheia"
 
 #: kiconedit.cpp:442 kiconedit.cpp:568
 msgid "Spray"
@@ -184,303 +185,306 @@ msgstr ""
 
 #: kiconedit.cpp:443 kiconedit.cpp:570
 msgid "Flood fill"
-msgstr ""
+msgstr "Preenchimento opaco"
 
 #: kiconedit.cpp:444
 msgid "Line"
-msgstr ""
+msgstr "Linha"
 
 #: kiconedit.cpp:445
 msgid "Eraser (Transparent)"
-msgstr ""
+msgstr "Apagar (transparente)"
 
 #: kiconedit.cpp:447
 msgid "&Tools"
-msgstr ""
+msgstr "&Ferramentas"
 
 #: kiconedit.cpp:451
 msgid "Toggle &Grid"
-msgstr ""
+msgstr "Alternar &Grade"
 
 #: kiconedit.cpp:455
 msgid "Toggle &toolbar"
-msgstr ""
+msgstr "Alternar &Barra de Ferramentas"
 
 #: kiconedit.cpp:458
 msgid "Toggle &drawing tools"
-msgstr ""
+msgstr "Alternar ferramentas de &desenho"
 
 #: kiconedit.cpp:461
 msgid "Toggle &statusbar"
-msgstr ""
+msgstr "Alterar barra de &status"
 
 #: kiconedit.cpp:465
 msgid "&Save options"
-msgstr ""
+msgstr "&Salvar opções"
 
 #: kiconedit.cpp:466
 msgid "&Options"
-msgstr ""
+msgstr "&Opções"
 
 #: kiconedit.cpp:470
 msgid "&Help"
-msgstr ""
+msgstr "&Ajuda"
 
 #: kiconedit.cpp:488
 msgid "New File"
-msgstr ""
+msgstr "Novo arquivo"
 
 #: kiconedit.cpp:490
 msgid "Open a file"
-msgstr ""
+msgstr "Abrir um arquivo"
 
 #: kiconedit.cpp:492
 msgid "Save the file"
-msgstr ""
+msgstr "Salvar o arquivo"
 
 #: kiconedit.cpp:495
 msgid "Print icon"
-msgstr ""
+msgstr "Imprimir ícone"
 
 #: kiconedit.cpp:498
 msgid "Cut"
-msgstr ""
+msgstr "Cortar"
 
 #: kiconedit.cpp:500
 msgid "Copy"
-msgstr ""
+msgstr "Copiar"
 
 #: kiconedit.cpp:502
 msgid "Paste"
-msgstr ""
+msgstr "Colar"
 
 #: kiconedit.cpp:506
 msgid "Resize"
-msgstr ""
+msgstr "Altera o tamanho"
 
 #: kiconedit.cpp:509
 msgid "GrayScale"
-msgstr ""
+msgstr "Tons de cinza"
 
 #: kiconedit.cpp:516
 msgid "Zoom out"
-msgstr ""
+msgstr "Afastar"
 
 #: kiconedit.cpp:518
 msgid "Zoom in"
-msgstr ""
+msgstr "Aproximar"
 
 #: kiconedit.cpp:521
 msgid "Toggle grid"
-msgstr ""
+msgstr "Alterar grade"
 
 #: kiconedit.cpp:526
 msgid "New Window"
-msgstr ""
+msgstr "Nova Janela"
 
 #: kiconedit.cpp:548
 msgid "Find pixel"
-msgstr ""
+msgstr "Encontrar pixel"
 
 #: kiconedit.cpp:550
 msgid "Draw freehand"
-msgstr ""
+msgstr "Desenho à mão livre"
 
 #: kiconedit.cpp:552
 msgid "Select area"
-msgstr ""
+msgstr "Selecionar área"
 
 #: kiconedit.cpp:554
 msgid "Draw line"
-msgstr ""
+msgstr "Desenhar linha"
 
 #: kiconedit.cpp:556
 msgid "Draw rectangle"
-msgstr ""
+msgstr "Desenhar retângulo"
 
 #: kiconedit.cpp:558
 msgid "Draw filled rectangle"
-msgstr ""
+msgstr "Desenhar retângulo cheio"
 
 #: kiconedit.cpp:560
 msgid "Draw circle"
-msgstr ""
+msgstr "Desenhar círculo"
 
 #: kiconedit.cpp:562
 msgid "Draw filled circle"
-msgstr ""
+msgstr "Desenhar círculo cheio"
 
 #: kiconedit.cpp:564
 msgid "Draw ellipse"
-msgstr ""
+msgstr "Desenhar elipse"
 
 #: kiconedit.cpp:566
 msgid "Draw filled ellipse"
-msgstr ""
+msgstr "Desenhar elipse cheia"
 
 #: kiconedit.cpp:573
 msgid "Erase"
-msgstr ""
+msgstr "Apagar"
 
 #: kiconedit.cpp:900
 msgid "Sorry - not implemented."
-msgstr ""
+msgstr "Desculpe, não implementado!"
 
 #: kiconedit.cpp:1002 kiconedit.cpp:1009
 #, c-format
 msgid "Colors: %u"
-msgstr ""
+msgstr "Cores: %u"
 
 #: kicongrid.cpp:424
 msgid "There was an error loading a blank image.\n"
-msgstr ""
+msgstr "Houve um erro ao carregar a imagem.\n"
 
 #: kicongrid.cpp:425
 msgid "Error"
-msgstr ""
+msgstr "Erro"
 
 #: kicongrid.cpp:517
 msgid "All selected"
-msgstr ""
+msgstr "Seleção total"
 
 #: kicongrid.cpp:528
 msgid "Cleared"
-msgstr ""
+msgstr "Limpa"
 
 #: kicongrid.cpp:578
 msgid "Selected area cutted"
-msgstr ""
+msgstr "Área selecionada cortada "
 
 #: kicongrid.cpp:581
 msgid "Selected area copied"
-msgstr ""
+msgstr "Área selecionada copiada"
 
 #: kicongrid.cpp:608
 msgid ""
 "There was an copying:\n"
 "to the clipboard!"
-msgstr ""
+msgstr "Copiado para a área de troca"
 
 #: kicongrid.cpp:626
 msgid ""
 "The clipboard image is larger than the current image!\n"
 "Paste as new image?"
-msgstr ""
+msgstr "A imagem na área de troca é maior que a imagem atual!\n"
+"Colar como uma nova imagem?"
 
 #: kicongrid.cpp:639
 msgid "Pasting"
-msgstr ""
+msgstr "Colando"
 
 #: kicongrid.cpp:674 kicongrid.cpp:704
 msgid "Done pasting"
-msgstr ""
+msgstr "Colagem concluída"
 
 #: kicongrid.cpp:679 kicongrid.cpp:708
 msgid "Invalid pixmap data in clipboard!\n"
-msgstr ""
+msgstr "Dados inválidos na área de troca!\n"
 
 #: kicontools.cpp:70
 msgid "System Colors"
-msgstr ""
+msgstr "Sistema de cores"
 
 #: kicontools.cpp:77
 msgid "Custom Colors"
-msgstr ""
+msgstr "Customizar cores"
 
 #: kiconfiledlg.cpp:36
 msgid "Open image"
-msgstr ""
+msgstr "Abrir imagem"
 
 #: kiconfiledlg.cpp:50
 msgid "Save image As"
-msgstr ""
+msgstr "Salvar imagem como"
 
 #: kicon.cpp:46
 msgid "There was an error removing temporary backup file:\n"
-msgstr ""
+msgstr "Houve um erro ao remover os arquivos temporários da cópia de segurança\n"
 
 #: kicon.cpp:72 kicon.cpp:240 kicon.cpp:319 kicon.cpp:408
 msgid ""
 "We've got a KFM job running.\n"
 "Please wait."
-msgstr ""
+msgstr "Há uma tarefa  do gerente de arquivos KDE sendo executada.\"
+"Por favor aguarde!"
 
 #: kicon.cpp:95
 msgid "The URL:\n"
-msgstr ""
+msgstr "a URL:\n"
 
 #: kicon.cpp:98 kicon.cpp:144 kicon.cpp:167 kicon.cpp:179 kicon.cpp:192
 #: kicon.cpp:205 kicon.cpp:216 kicon.cpp:362 kicon.cpp:395
 msgid "ERROR"
-msgstr ""
+msgstr "ERRO"
 
 #: kicon.cpp:114
 msgid "The KDE Icon Editor has found a recover file for:\n"
-msgstr ""
+msgstr "O editor de ícones KDE encontrou um arquivo recuperado para:\n" 
 
 #: kicon.cpp:116 kicon.cpp:263
 msgid ""
 "\n"
 "Do you want to open this?"
-msgstr ""
+msgstr "Deseja abrir este arquivo?"
 
 #: kicon.cpp:117 kicon.cpp:264 kicon.cpp:272
 msgid "Information"
-msgstr ""
+msgstr "Informação"
 
 #: kicon.cpp:141
 msgid "The file:\n"
-msgstr ""
+msgstr "O arquivo:\n"
 
 #: kicon.cpp:158
 msgid ""
 "The Icon Editor is already downloading a non-local file.\n"
 "Please wait.\n"
-msgstr ""
+msgstr "O Editor de Ícones está transferindo um arquivo de um site remoto.\n"
+"Por favor aguarde.\n
 
 #: kicon.cpp:168
 msgid "Couldn't initiate KFM!"
-msgstr ""
+msgstr "Não foi possível iniciar o KFM - Gerente de Arquivos KDE "
 
 #: kicon.cpp:176
 msgid "There was a KFM error creating a backup for:\n"
-msgstr ""
+msgstr "Houve um erro no KFM ao criar a cópia de segurança para:\n"
 
 #: kicon.cpp:189 kicon.cpp:359
 msgid "There was an error creating a backup for:\n"
-msgstr ""
+msgstr "Houve um erro ao criar a cópia de segurança para:\n"
 
 #: kicon.cpp:202
 msgid "KIcon: There was a error locking:\n"
-msgstr ""
+msgstr "Kicon: houve um erro de compartilhamento do arquivo:\n"
 
 #: kicon.cpp:213 kicon.cpp:269
 msgid "KIcon: There was a QT error loading:\n"
-msgstr ""
+msgstr "Kicon: houve um erro na carga do QT:\n"
 
 #: kicon.cpp:261
 msgid "The KDE Icon Editor has found a recover\n"
-msgstr ""
+msgstr "O Editor de Ícones do KDE encontrou um arquivo recuperado\n"
 
 #: kicon.cpp:262
 msgid "file for an unsaved icon."
-msgstr ""
+msgstr "arquivo para um ícone não salvo"
 
 #: kicon.cpp:372
 msgid "Couldn't initiate KFM"
-msgstr ""
+msgstr "Não foi possível iniciar o KFM"
 
 #: kicon.cpp:385
 msgid "Done saving"
-msgstr ""
+msgstr "Salvamento concluído"
 
 #: kicon.cpp:392
 msgid "There was an error saving:\n"
-msgstr ""
+msgstr "Houve uma mensagem de erro durante o salvamento:\n"
 
 #: kresize.cpp:28
 msgid "Size:"
-msgstr ""
+msgstr "Tamanho:"
 
 #: kresize.cpp:49
 msgid "&Ok"
@@ -488,56 +492,56 @@ msgstr ""
 
 #: kresize.cpp:54
 msgid "&Cancel"
-msgstr ""
+msgstr "&Cancelar"
 
 #: kresize.cpp:63
 msgid "Select size:"
-msgstr ""
+msgstr "Selecionar tamanho:"
 
 #: knew.cpp:33
 msgid "Standard file"
-msgstr ""
+msgstr "Arquivo padrão"
 
 #: knew.cpp:38
 msgid "Source file"
-msgstr ""
+msgstr "Arquivo fonte"
 
 #: knew.cpp:43
 msgid "Compressed file"
-msgstr ""
+msgstr "Arquivo comprimido"
 
 #: knew.cpp:48
 msgid "Standard folder"
-msgstr ""
+msgstr "Pasta padrão"
 
 #: knew.cpp:53
 msgid "Standard package"
-msgstr ""
+msgstr "Pacote padrão"
 
 #: knew.cpp:58
 msgid "Mini folder"
-msgstr ""
+msgstr "Mini pasta"
 
 #: knew.cpp:63
 msgid "Mini package"
-msgstr ""
+msgstr "Mini pacote"
 
 #: knew.cpp:155 knew.cpp:257 knew.cpp:307
 msgid "Create from scratch"
-msgstr ""
+msgstr "Criar de um rascunho"
 
 #: knew.cpp:157 knew.cpp:312
 msgid "Create from template"
-msgstr ""
+msgstr "Criar de um modelo"
 
 #: knew.cpp:193
 msgid "Templates:"
-msgstr ""
+msgstr "Modelos:"
 
 #: knew.cpp:251
 msgid "Select icontype"
-msgstr ""
+msgstr "Selecionar o tipo de ícone"
 
 #: knew.cpp:262
 msgid "Create new icon"
-msgstr ""
+msgstr "Criar um novo ícone"
