--- a/po/pt_BR/kview.po
+++ b/po/pt_BR/kview.po
@@ -1,3 +1,4 @@
+#
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -6,231 +7,232 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-08-09 15:48+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 1998-08-03 21:27+0200\n"
+"PO-Revision-Date: 1998-09-08 09:00\n"
+"Last-Translator: Sandro Nunes Henrique <sandro@conectiva.com.br>\n"
+"Language-Team: pt_BR <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
 
 #: wview.cpp:81
 msgid "&Image"
-msgstr ""
+msgstr "&Imagem"
 
 #: wview.cpp:87
 msgid "&Open File.."
-msgstr ""
+msgstr "&Abrir Arquivo..."
 
 #: wview.cpp:88
 msgid "Open &URL.."
-msgstr ""
+msgstr "Abril &URL..."
 
 #: wview.cpp:95
 msgid "&Zoom"
-msgstr ""
+msgstr "&Aproximar"
 
 #: wview.cpp:96
 msgid "&Rotate"
-msgstr ""
+msgstr "&Girar"
 
 #: wview.cpp:97
 msgid "To &Desktop"
-msgstr ""
+msgstr "para a &Área de Trabalho"
 
 #: wview.cpp:99
 msgid "&Toggle Menu"
-msgstr ""
+msgstr "&Ativar o Menu"
 
 #: wview.cpp:100
 msgid "&Size Window"
-msgstr ""
+msgstr "Tamanho da &Janela"
 
 #: wview.cpp:102
 msgid "I&mage Info"
-msgstr ""
+msgstr "Informações da I&magem"
 
 #: wview.cpp:106
 msgid "&in"
-msgstr ""
+msgstr "&dentro"
 
 #: wview.cpp:107
 msgid "&out"
-msgstr ""
+msgstr "&fora"
 
 #: wview.cpp:111
 msgid "&Clockwise"
-msgstr ""
+msgstr "&Sentido horário"
 
 #: wview.cpp:113
 msgid "&Anti-clock"
-msgstr ""
+msgstr "&Anti-horário"
 
 #: viewport.cpp:51 wview.cpp:118
 msgid "Ti&le"
-msgstr ""
+msgstr "Mosaico"
 
 #: wview.cpp:119
 msgid "&Max Size"
-msgstr ""
+msgstr "Tamanho &Máximo"
 
 #: wview.cpp:120
 msgid "M&axpect"
-msgstr ""
+msgstr "M&áximo"
 
 #: viewport.cpp:41
 msgid "Clockwise"
-msgstr ""
+msgstr "Sentido horário"
 
 #: viewport.cpp:43
 msgid "Anti-clock"
-msgstr ""
+msgstr "Anti-horário"
 
 #: viewport.cpp:45
 msgid "Mirror X"
-msgstr ""
+msgstr "Espelho X"
 
 #: viewport.cpp:47
 msgid "Mirror Y"
-msgstr ""
+msgstr "Espelho Y"
 
 #: viewport.cpp:52
 msgid "Max Size"
-msgstr ""
+msgstr "Tamanho Máximo"
 
 #: viewport.cpp:53
 msgid "Maxpect"
-msgstr ""
+msgstr "Máximo"
 
 #: viewport.cpp:56
 msgid "Zoom"
-msgstr ""
+msgstr "Aproximar"
 
 #: viewport.cpp:57
 msgid "Rotate"
-msgstr ""
+msgstr "Girar"
 
 #: viewport.cpp:58
 msgid "To Desktop"
-msgstr ""
+msgstr "Para a Área de Trabalho"
 
 #: viewport.cpp:59
 msgid "Fit window size to pixmap size"
-msgstr ""
+msgstr "Ajustar o tamanho da janela para o tamanho do mapa de pixels"
 
 #: viewport.cpp:61
 msgid "Fit pixmap size to window size"
-msgstr ""
+msgstr "Ajustar o mapa de pixels para o tamanho da janela"
 
 #: fileman.cpp:53
 msgid "KView Display Manager"
-msgstr ""
+msgstr "Gerente de Apresentação KView"
 
 #: fileman.cpp:101
 msgid "Open &URL..."
-msgstr ""
+msgstr "Abrir &URL..."
 
 #: fileman.cpp:124
 msgid "Image Caching"
-msgstr ""
+msgstr "Cache de imagem"
 
 #: fileman.cpp:132
 msgid "Cache Size"
-msgstr ""
+msgstr "Tamanho do cache"
 
 #: fileman.cpp:134
 msgid "Save Options"
-msgstr ""
+msgstr "Opções de Salvamento"
 
 #: fileman.cpp:139
 msgid "&About KView"
-msgstr ""
+msgstr "&Sobre KView"
 
 #: fileman.cpp:162
 msgid "New Window"
-msgstr ""
+msgstr "Nova Janela"
 
 #: fileman.cpp:168
 msgid "open new file"
-msgstr ""
+msgstr "abrir um novo arquivo"
 
 #: fileman.cpp:183
 #, c-format
 msgid "shrink -50%"
-msgstr ""
+msgstr "encolher -50%"
 
 #: fileman.cpp:189
 #, c-format
 msgid "magnify +50%"
-msgstr ""
+msgstr "aumentar +50%"
 
 #: fileman.cpp:195
 msgid "size Window"
-msgstr ""
+msgstr "tamanho da janela"
 
 #: fileman.cpp:202
 msgid "launch help"
-msgstr ""
+msgstr "inicia a ajuda"
 
 #: fileman.cpp:209
 msgid "first pic"
-msgstr ""
+msgstr "primeira imagem"
 
 #: fileman.cpp:215
 msgid "last pic"
-msgstr ""
+msgstr "última imagem"
 
 #: fileman.cpp:222
 msgid "prev pic"
-msgstr ""
+msgstr "imagem anterior"
 
 #: fileman.cpp:228
 msgid "next pic"
-msgstr ""
+msgstr "próxima imagem"
 
 #: fileman.cpp:235
 msgid "start picture show"
-msgstr ""
+msgstr "iniciar show de imagens"
 
 #: fileman.cpp:241
 msgid "random picture show"
-msgstr ""
+msgstr "show de imagens randômico"
 
 #: fileman.cpp:247
 msgid "stop picture show"
-msgstr ""
+msgstr "parar show de imagens"
 
 #: fileman.cpp:280
 msgid "slow"
-msgstr ""
+msgstr "devagar"
 
 #: fileman.cpp:285
 msgid "fast"
-msgstr ""
+msgstr "rápido"
 
 #: fileman.cpp:299
 msgid "Output Device"
-msgstr ""
+msgstr "Dispositivo de Saída"
 
 #: fileman.cpp:378
 #, c-format
 msgid " Files: %d"
-msgstr ""
+msgstr " Arquivos: %d"
 
 #: fileman.cpp:388
 #, c-format
 msgid " Format: %s Size: %dx%d"
-msgstr ""
+msgstr " Formato: %s Tamanho: %dx%d"
 
 #: fileman.cpp:531
 #, c-format
 msgid "Window %d"
-msgstr ""
+msgstr "Janela %d"
 
 #: fileman.cpp:655
 msgid "(c) 1996 - 1998 by \n"
-msgstr ""
+msgstr "(c) 1996 - 1998 por \n"
 
 #: fileman.cpp:658
 msgid "About KView"
-msgstr ""
+msgstr "Sobre KView"
+
