Adds a new translation.

--- a/po/no/kghostview.po
+++ b/po/no/kghostview.po
@@ -329,6 +329,16 @@ msgid ""
 "\n"
 "See http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 msgstr ""
+" - PostScript-dokumentfremviseren for\n"
+"K Desktop Environment.\n"
+"\n"
+"Skrevet Mark Donohoe <donohoe@kde.org>, basert på orginale\n"
+"arbeidet til Tim Theisen.\n"
+"\n"
+"Lagt inn kode fra Incorporate Johanes Plass' gv. Dette legger til støtte for\n"
+"komprimerte filer og PDF-filer\n"
+"\n"
+"Se http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 
 #: kghostview.cpp:657
 msgid "New window ..."
