--- a/po/no/kiconedit.po
+++ b/po/no/kiconedit.po
@@ -10,8 +10,8 @@ msgstr ""
 "Last-Translator:  Hans Petter Bieker <zerium@webindex.no>\n"
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=ISO_8859-1\n"
+"Content-Transfer-Encoding: ISO_8859-1\n"
 
 #: utils.cpp:56
 #, c-format
